[gd_scene load_steps=3 format=1]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://MatierePremiere.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Node2D"]

transform/pos = Vector2( 71, 50 )
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -73.0
margin/top = -52.0
margin/right = 956.0
margin/bottom = 560.0

[node name="LabelTour" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "Mois 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonFinTour" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 81.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fin du mois"
flat = false

[node name="HBAEmployees" type="HButtonArray" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 552.0
margin/top = -13.0
margin/right = 707.0
margin/bottom = 27.0
flat = false
button/count = 3
button/min_button_size = 30.0
button/align = 0
button/0/text = "-1"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "salariés"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "+1"
button/2/tooltip = ""
button/2/icon = null
button/selected = 1

[node name="LabelSalary" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 556.0
margin/top = 54.0
margin/right = 612.0
margin/bottom = 70.0
text = "Salaire"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpinBoxSalary" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 613.0
margin/top = 47.0
margin/right = 687.0
margin/bottom = 71.0
range/min = 500.0
range/max = 5000.0
range/step = 100.0
range/page = 0.0
range/value = 500.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="MatierePremiere1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 485, 158.829 )

[node name="MatierePremiere2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 485, 242.829 )

[node name="MatierePremiere3" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 485, 324.83 )

[node name="GridContainerInfos" type="GridContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 350.0
margin/top = -28.0
margin/right = 498.0
margin/bottom = 148.0
columns = 1

[node name="GridContainer" type="GridContainer" parent="GridContainerInfos"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 127.0
margin/bottom = 80.0
columns = 2

[node name="LabelTreso" type="Label" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 65.0
margin/bottom = 19.0
text = "Trésorerie"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditTreso" type="LineEdit" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 69.0
margin/top = 0.0
margin/right = 127.0
margin/bottom = 24.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LabelStock" type="Label" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 33.0
margin/right = 65.0
margin/bottom = 47.0
text = "Stock"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditStock" type="LineEdit" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 69.0
margin/top = 28.0
margin/right = 127.0
margin/bottom = 52.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LabelPrice" type="Label" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 61.0
margin/right = 65.0
margin/bottom = 75.0
text = "Prix"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditPrice" type="LineEdit" parent="GridContainerInfos/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 69.0
margin/top = 56.0
margin/right = 127.0
margin/bottom = 80.0
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="LabelMoisDernier" type="Label" parent="GridContainerInfos"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 84.0
margin/right = 127.0
margin/bottom = 98.0
text = "Mois dernier"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_down" from="ButtonFinTour" to="." method="next_turn"]

[connection signal="value_changed" from="SpinBoxSalary" to="." method="set_salary"]


